<resources>
	<string name="required_fields">Required Fields</string>
	<string name="required_field">Required Field</string>
	<string name="url_username_password_required">Please fill in all of the fields before submitting.
	</string>
	<string name="xmlrpc_error">Could not connect. Please enter the full path to
		xmlrpc.php on your site and try again.
	</string>
	<string name="no_blogs_found">No Blogs Found</string>
	<string name="no_blogs_message">No %s blogs were found for that account.</string>
	<string name="additional">additional</string>
	<string name="add_all">Add All</string>
	<string name="add_selected">Add Selected</string>
	<string name="select_blogs">Select Blogs</string>
	<string name="enable_blogs">Enable blogs</string>
	<string name="no_network_title">No network available</string>
	<string name="no_network_message">There is no network available. Please connect to a
		network and try again.
	</string>
	<string name="sure_sign_out">Are you sure you want to sign out from
		WordPress.com?
	</string>
	<string name="sign_out_confirm">Are you sure you want to sign out?</string>
	<string name="please_sign_in">Please sign in again.</string>
	<string name="account_two_step_auth_enabled">This account has two step authentication enabled.
		Please open WordPress.com in your browser, and generate an
		application-specific passwords to use with this app.\n(Log in to
		WordPress, and go to Settings->security).
	</string>
	<string name="select_categories">Select Categories</string>
	<string name="tags_and_categories">Tags &amp; Categories</string>
	<string name="tags_separate_with_commas">Tags (separate tags with commas)</string>
	<string name="post_content">Content (tap to add text and media)</string>
	<string name="dont_yet_have_a_blog">Don\'t yet have a blog?</string>
	<string name="max_thumbnail_px_width">Default image width</string>
	<string name="password">Password</string>
	<string name="get_free_blog">Get a free blog at WordPress.com</string>
	<string name="tagline">Start blogging in seconds.</string>
	<string name="i_have_wp_blog">Add blog hosted at WordPress.com</string>
	<string name="i_have_blog">Add self-hosted WordPress blog</string>
	<string name="new_to_wp">Start a new blog at WordPress.com</string>
	<string name="blogs">Blogs</string>
	<string name="account_details">Account Details</string>
	<string name="status">Status</string>
	<string name="comment_content">Comment Content</string>
	<string name="anonymous">Anonymous</string>
	<string name="post">Post</string>
	<string name="page">Page</string>
	<string name="posts">Posts</string>
	<string name="pages">Pages</string>
	<string name="about">About</string>
	<string name="username">Username</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="add">Add</string>
	<string name="selected_categories">Selected categories:</string>
	<string name="publish">Publish? </string>
	<string name="add_account">Add Blog</string>
	<string name="notification_sound">Play notification sound</string>
	<string name="notification_vibrate">Vibrate</string>
	<string name="notification_blink">Blink notification light</string>
	<string name="sure_to_remove_account">Are you sure you want to remove this blog?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="error">Error</string>
	<string name="could_not_remove_account">Could not remove blog.</string>
	<string name="edit_page">Edit Page</string>
	<string name="edit_post">Edit Post</string>
	<string name="add_comment">Add Comment</string>
	<string name="refreshing_categories">Refreshing Categories</string>
	<string name="attempting_categories_refresh">Attempting to refresh categories</string>
	<string name="connection_error">Connection Error</string>
	<string name="connection_error_occured">A connection error has occurred. Please try again
		later.
	</string>
	<string name="categories_refreshed">Categories refreshed</string>
	<string name="category_refresh_error">Category refresh error</string>
	<string name="incorrect_credentials">Incorrect username or password.</string>
	<string name="empty_fields">No Content Found</string>
	<string name="title_post_required">Please enter some post content or attach a media
		item.
	</string>
	<string name="cancel_edit">Cancel Edit</string>
	<string name="sure_to_cancel_edit">Are you sure you want to cancel editing this post?
	</string>
	<string name="new_account">New Account</string>
	<string name="upload_full_size_image">Upload and link to full image</string>
	<string name="upload_scaled_image">Upload and link to scaled image</string>
	<string name="scaled_image_error">Please enter a valid scaled width value</string>
	<string name="scaled_image">Scaled image width</string>
	<string name="load_more">Load More</string>
	<string name="load_settings">Load settings now?</string>
	<string name="immediately">Immediately</string>
	<string name="uploading">Uploading</string>
	<string name="uploading_media_item">Uploading media item #</string>
	<string name="gallery_error">Sorry, the media item could not be retrieved.
	</string>
	<string name="refresh">Refresh</string>
	<string name="home">Home</string>
	<string name="more_tag">More</string>
	<string name="blog_not_found">Sorry, an error occurred when attempting to access
		this blog.
	</string>
	<string name="post_not_found">Sorry, an error occurred when attempting to load
		the post. Please refresh your posts and try again.
	</string>
	<string name="wpcom">WordPress.com</string>
	<string name="sign_in">Sign in</string>
	<string name="sign_out">Sign out</string>
	<string name="upload">Upload</string>
	<string name="please_wait_refresh_done">Please wait, loading items.</string>
	<string name="info">Info</string>
	<string name="tab_comments">Comments</string>
	<string name="tab_posts">Posts</string>
	<string name="tab_pages">Pages</string>
	<string name="tab_stats">Stats</string>
	<string name="link_enter_url">URL</string>
	<string name="link_enter_url_text">Link Text (optional)</string>
	<string name="create_a_link">Create a Link</string>
	<string name="title">Title</string>
	<string name="content">Tap to add text and media</string>
	<string name="sure_to_cancel_edit_page">Are you sure you want to cancel editing this page?
	</string>
	<string name="untitled">Untitled</string>
	<string name="local_draft">Local Draft</string>
	<string name="local_drafts">Local Drafts</string>
	<string name="post_id">Post</string>
	<string name="upload_failed">Upload Failed</string>
	<string name="post_password">Password (optional)</string>
	<string name="caption">Caption (optional)</string>
	<string name="horizontal_alignment">Horizontal Alignment</string>
	<string name="width">Width</string>
	<string name="featured">Use as featured image</string>
	<string name="featured_in_post">Include image in post content</string>
	<string name="out_of_memory">Device out of memory.</string>
	<string name="file_not_found">Could not find the media file for upload. Was it
		deleted or moved?
	</string>
	<string name="post_excerpt">Excerpt</string>
	<string name="download">Downloading Image</string>
	<string name="page_id">Page</string>
	<string name="add_comment_enter">Enter comment:</string>
	<string name="add_comment_send">Send Comment</string>
	<string name="write_comment">Write Comment</string>
	<string name="add_comment_required">Required Field</string>
	<string name="add_comment_please_enter">Please enter something in the comment field.
	</string>
	<string name="reply_enter">Enter a reply:</string>
	<string name="reply_send">Send Reply</string>
	<string name="reply_to_comment">Reply to Comment</string>
	<string name="reply_please_enter">Please enter something in the reply field.</string>
	<string name="loading">Loading&#8230;</string>
	<string name="on">on</string>
	<string name="approved">Approved</string>
	<string name="unapproved">Unapproved</string>
	<string name="spam">Spam</string>
	<string name="moderating_comment">Moderating comment</string>
	<string name="moderating_comments">Moderating comments</string>
	<string name="replying_comment">Replying to comment</string>
	<string name="deleting_comment">Deleting comment</string>
	<string name="deleting_comments">Deleting comments</string>
	<string name="comment_moderated">Comment Moderated Successfully</string>
	<string name="comments_moderated">Comments Moderated Successfully</string>
	<string name="reply_added">Reply Added Successfully</string>
	<string name="view_comment_from">Comment from</string>
	<string name="edit_comment">Edit Comment</string>
	<string name="author_name">Name</string>
	<string name="author_email">E-mail</string>
	<string name="author_url">URL</string>
	<string name="comment_update">Update Comment</string>
	<string name="saving_changes">Saving Changes</string>
	<string name="sure_to_cancel_edit_comment">Are you sure you want to cancel editing this
		comment?
	</string>
	<string name="content_required">The comment body is required.</string>
	<string name="remove_account">Remove Blog</string>
	<string name="blog_removed_successfully">Blog Removed Successfully</string>
	<string name="draft_actions">Draft Actions</string>
	<string name="edit_draft">Edit Draft</string>
	<string name="delete_draft">Delete Draft</string>
	<string name="delete_sure">Are you sure you want to delete the draft</string>
	<string name="page_actions">Page Actions</string>
	<string name="preview_page">View Page</string>
	<string name="delete_page">Delete Page</string>
	<string name="page_deleted">Page Deleted Successfully</string>
	<string name="delete_sure_page">Are you sure you want to delete the page</string>
	<string name="attempt_delete_page">Attempting to delete page</string>
	<string name="post_actions">Post Actions</string>
	<string name="preview_post">View Post</string>
	<string name="delete_post">Delete Post</string>
	<string name="post_deleted">Post Deleted Successfully</string>
	<string name="comment_added">Comment Added Successfully</string>
	<string name="attempting_add_comment">Attempting to post comment</string>
	<string name="delete_sure_post">Are you sure you want to delete the post</string>
	<string name="attempt_delete_post">Attempting to delete post</string>
	<string name="share_url">Share Post</string>
	<string name="share_url_page">Share Page</string>
	<string name="share_link">Share Link</string>
	<string name="attempting_fetch_url">Attempting to fetch URL</string>
	<string name="post_not_published">Post status is not published</string>
	<string name="page_not_published">Page status is not published</string>
	<string name="view_in_browser">View in Browser</string>
	<string name="post_signature">Post signature</string>
	<string name="add_tagline">Add a signature to new posts</string>
	<string name="posted_from">Posted from WordPress for Android</string>
	<string name="posted_from_blackberry">Posted from WordPress for BlackBerry</string>
	<string name="preview">Preview</string>
	<string name="comment_actions">Comment Actions</string>
	<string name="mark_approved">Mark Approved</string>
	<string name="mark_unapproved">Mark Unapproved</string>
	<string name="mark_spam">Spam</string>
	<string name="reply">Reply</string>
	<string name="delete">Delete</string>
	<string name="approve">Approve</string>
	<string name="unapprove">Unapprove</string>
	<string name="confirm_delete">Confirm Deletion</string>
	<string name="category_name">Category Name</string>
	<string name="category_slug">Category Slug (optional)</string>
	<string name="category_desc">Category Description (optional)</string>
	<string name="category_parent">Category Parent (optional):</string>
	<string name="optional_settings">Optional Settings</string>
	<string name="log_in">Sign In</string>
	<string name="new_post">New Post</string>
	<string name="quick_photo">Quick Photo</string>
	<string name="ok">OK</string>
	<string name="add_account_blog_url">Blog URL</string>
</resources>