<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:padding="10dp">

		<!-- taxonomy -->
		<TextView android:id="@+id/taxonomyLabel" style="@style/WordPressSubHeader"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/category_parent" android:visibility="gone" />
		<Spinner android:id="@+id/taxonomySpinner"
			android:layout_width="fill_parent" android:layout_height="50dp"
			android:layout_marginBottom="10dp" android:layout_below="@id/taxonomyLabel"
			android:visibility="gone" />

		<!-- Category name -->
		<EditText android:id="@+id/category_name"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/category_name" android:inputType="text"
			android:layout_below="@id/taxonomySpinner" />

		<!-- Category slug -->
		<EditText android:id="@+id/category_slug" android:hint="@string/category_slug"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_below="@id/category_name" android:inputType="text" />

		<!-- Category description -->
		<EditText android:id="@+id/category_desc"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_below="@id/category_slug" android:inputType="text"
			android:hint="@string/category_desc" />

		<!-- Parent category -->
		<TextView android:id="@+id/parentDescLabel" style="@style/WordPressSubHeader"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_below="@id/category_desc" android:text="@string/category_parent" />
		<Spinner android:id="@+id/parent_category"
			android:layout_width="fill_parent" android:layout_height="50dp"
			android:layout_marginBottom="10dp" android:layout_below="@id/parentDescLabel" />

		<Button android:id="@+id/ok" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignParentRight="true"
			android:layout_marginLeft="10dp" android:textSize="20sp"
			android:text="@string/ok" android:layout_below="@id/parent_category" />

		<Button android:id="@+id/cancel" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignTop="@id/ok"
			android:layout_toLeftOf="@id/ok" android:textSize="20sp"
			android:text="@string/cancel" />

	</RelativeLayout>
</ScrollView>